service ExternalClientThriftService {
    string getStatus(),
    string getHistory()
}