service HqThriftService {
    string getOtherHqStatus(1:i32 index)
}